MOC-61: UI for table

--- a/mockez-front/src/app/app.component.html
+++ b/mockez-front/src/app/app.component.html
@@ -6,7 +6,7 @@
     <router-outlet></router-outlet>
   </div>
 </div>
-<div *ngIf='appConfigProviderService.loading' class='loading'>
+<div *ngIf='appConfigProviderService.isLoading' class='loading'>
   <div class='lds-roller p-0 bg-transparent'>
     <div></div>
     <div></div>
