--- a/mockez-front/src/app/shared/modal/toast-service/toast/toast.component.html
+++ b/mockez-front/src/app/shared/modal/toast-service/toast/toast.component.html
@@ -1,5 +1,3 @@
-<div class="toast"
-     [@fadeAnimation]="{value: animationState, params:
-        { fadeIn: toastConfig.animation?.fadeIn, fadeOut: toastConfig.animation?.fadeOut }}"
-     (@fadeAnimation.done)="onFadeFinished($event)">
+<div class="toast">
+
 </div>
