--- a/mockez-front/src/app/component/group/component/groups/groups.component.html
+++ b/mockez-front/src/app/component/group/component/groups/groups.component.html
@@ -1,19 +1,23 @@
-<div class='main mx-auto'>
-  <div class='search text-center'>
-    <input class='text-sm w-1/2 py-2 px-5 rounded-md' type='text' placeholder='Find anything...' />
+<div id='main' class='mx-auto'>
+  <div class='text-center items-center'>
+    <input class='text-sm w-1/2 focus:drop-shadow-xl py-2 px-5 rounded-md' [formControl]='filter' type='text'
+           placeholder='{{ "label.search_placeholder" | translate }}' />
+    <button class='ml-3 rounded bg-green font-medium hover:drop-shadow-xl text-white text-sm py-1.5 px-5'
+            (click)='create()'>{{ 'label.button_new' | translate }}</button>
   </div>
-  <div class='cards flex mt-5 justify-evenly flex-wrap'>
-    <div *ngFor='let group of groups; index as index'
-         class='card relative m-4 flex items-center cursor-pointer hover:drop-shadow-xl bg-white py-5 pl-10 pr-5 rounded-md w-80 h-32'
-         (click)='openDetail(index + "")'>
-      <div class='absolute left-4 rounded-md w-1 h-28' [style]='setLineBackgroundColor(index)'></div>
+  <p *ngIf='!groups?.length' class='mt-5 text-center text-sm'>{{ 'message.no_group_match' | translate }}</p>
+  <div class='flex justify-evenly mt-5 flex-wrap'>
+    <div *ngFor='let group of groups'
+         class='relative m-4 flex items-center cursor-pointer hover:drop-shadow-xl bg-white py-5 pl-10 pr-5 rounded-md w-96 h-32'
+         (click)='openDetail(group.id!)'>
+      <div class='absolute left-4 rounded-md w-1 h-28 bg-green'></div>
       <div class='w-1/4'>
-        <img class='w-20' src='assets/group.png' alt='group' />
+        <img class='w-16' src='assets/group.png' alt='group' />
       </div>
-      <div class='info ml-5 w-1/2'>
-        <p class='font-medium'>{{ 'Do Quoc Viet' }}</p>
-        <p class='text-sm text-gray-500'>{{ 'Software Engineer' }}</p>
-        <p class='text-sm text-gray-500'>{{ 'Member: 19' | truncate:20 }}</p>
+      <div class='text-sm ml-5 w-1/2'>
+        <p class='font-medium uppercase'>{{ group.name | truncate: 15 }}</p>
+        <p class='text-gray-500 first-letter:uppercase'>{{ group.description | truncate: 20 }}</p>
+        <p class='text-gray-500'>{{ ('label.member' | translate) + 0 }}</p>
       </div>
       <div class='absolute top-4 right-5 flex'>
         <p class='w-3 h-3 rounded-full bg-red'></p>
@@ -22,9 +26,4 @@
       </div>
     </div>
   </div>
-  <button
-    class='absolute bottom-10 right-5 bg-green rounded-full w-12 h-12 drop-shadow-xl font-bold text-white search-button'
-    (click)='create()'>
-    +
-  </button>
 </div>
