--- a/mockez-front/src/app/component/group/modal/create-group/create-group.modal.html
+++ b/mockez-front/src/app/component/group/modal/create-group/create-group.modal.html
@@ -1,7 +1,7 @@
 <div id='main' class='dialog text-sm'>
-  <div class='board' [formGroup]='formGroup'>
+  <div class='' style='width: 650px' [formGroup]='formGroup'>
     <div class='flex justify-between'>
-      <p class='font-bold'>CREATE GROUP</p>
+      <p class='font-bold'>{{ 'modal.create_group.title' | translate }}</p>
       <div class='flex'>
         <p class='w-3 h-3 rounded-full bg-red'></p>
         <p class='w-3 h-3 ml-3 rounded-full bg-yellow'></p>
@@ -9,23 +9,28 @@
       </div>
     </div>
     <div class='relative mt-5'>
-      <label class='block font-medium' for='name'>Name:</label>
+      <label class='block font-medium' for='name'>{{ 'modal.create_group.name' | translate }}</label>
       <div class='input flex items-center'>
-        <input formControlName='name' class='relative pt-1 pb-3 mt-3 w-full' type='text' id='name'
-               placeholder='Enter project name'/>
+        <input formControlName='name' class='relative pt-1 pb-3 mt-1 w-full' type='text' id='name'
+               placeholder='{{ "modal.create_group.name_placeholder" | translate }}' />
       </div>
     </div>
     <div class='relative mt-5'>
-      <label class='block font-medium' for='description'>description:</label>
+      <label class='block font-medium' for='description'>{{ 'modal.create_group.description' | translate }}</label>
       <div class='input flex items-center'>
-        <textarea formControlName='description' class='relative leading-6 pt-1 pb-3 mt-3 w-full h-60 max-h-60 focus:outline-0'
+        <textarea formControlName='description'
+                  class='relative leading-6 resize-none pt-1 pb-3 mt-1 w-full h-20 focus:outline-0'
                   type='text' id='description'
-                  placeholder='Enter project description'></textarea>
+                  placeholder='{{ "modal.create_group.description_placeholder" | translate }}'></textarea>
       </div>
     </div>
-    <div class='flex justify-end mt-10 -mr-3'>
-      <button (click)='close(false)' type='button' class='bg-gray text-sm text-black rounded font-medium px-5 h-10 py-2 mr-3'>Cancel</button>
-      <button (click)='submit()' type='button' class='bg-blue text-sm text-white rounded font-medium px-5 h-10 py-2 mr-3'>OK</button>
+    <div class='flex justify-end mt-4 -mr-3'>
+      <button (click)='close(false)' type='button'
+              class='bg-gray text-sm text-black rounded font-medium px-5 py-2 mr-3'>{{ 'label.cancel' | translate }}
+      </button>
+      <button (click)='submit()' type='button'
+              class='bg-green text-sm text-white hover:drop-shadow-xl rounded font-medium px-5 py-2 mr-3'>{{ 'label.save' | translate }}
+      </button>
     </div>
   </div>
 </div>
