--- a/mockez-front/src/app/component/profile/component/profile/profile.component.html
+++ b/mockez-front/src/app/component/profile/component/profile/profile.component.html
@@ -1,5 +1,5 @@
 <div id='main' class='mx-auto'>
-  <div class='flex items-center relative rounded-2xl bg-white py-5 px-20'>
+  <div class='flex items-center relative rounded bg-white py-5 px-20'>
     <img class='w-32' src='assets/profile.png' alt='profile' />
     <div class='ml-8'>
       <p class='text-lg font-medium'>{{ user.name | uppercase }}</p>
@@ -11,16 +11,11 @@
       <p class='w-3 h-3 mt-3 rounded-full bg-green'></p>
     </div>
   </div>
-  <div class='mt-5 bg-white rounded-2xl py-16 px-20 text-sm' [formGroup]='formGroup'>
+  <div class='mt-3 bg-white rounded py-16 px-20 text-sm' [formGroup]='formGroup'>
     <div class='flex mt-5 justify-center'>
       <p class='font-medium w-1/4'>{{ 'Username:' }}</p>
       <input class='border w-1/2 py-2 pl-3 pr-14 rounded-md' type='email' formControlName='username'
              placeholder='Please enter your email' />
-    </div>
-    <div class='flex mt-5 justify-center'>
-      <p class='font-medium w-1/4'>{{ 'Password:' }}</p>
-      <input class='border w-1/2 py-2 pl-3 pr-14 rounded-md' type='password' formControlName='password'
-             placeholder='Please enter your password' />
     </div>
     <div class='flex mt-5 justify-center'>
       <p class='font-medium w-1/4'>{{ 'Name:' }}</p>
@@ -44,11 +39,13 @@
       <p class='font-medium w-1/4'>{{ 'Gender:' }}</p>
       <div class='flex w-1/2'>
         <div class='flex items-center'>
-          <input id='male' type='radio' name='gender' (click)='gender=MALE' [checked]='gender===MALE' class='cursor-pointer w-4 h-4'>
+          <input id='male' type='radio' name='gender' (click)='gender=MALE' [checked]='gender===MALE'
+                 class='cursor-pointer w-4 h-4'>
           <label for='male' class='ml-2 text-sm'>Male</label>
         </div>
         <div class='flex items-center ml-28'>
-          <input id='female' type='radio' name='gender' (click)='gender=FEMALE' [checked]='gender===FEMALE' class='cursor-pointer w-4 h-4'>
+          <input id='female' type='radio' name='gender' (click)='gender=FEMALE' [checked]='gender===FEMALE'
+                 class='cursor-pointer w-4 h-4'>
           <label for='female' class='ml-2 text-sm'>Female</label>
         </div>
       </div>
@@ -61,11 +58,15 @@
     <div class='flex mt-5 justify-center'>
       <p class='font-medium w-1/4'>{{ 'Date of birth:' }}</p>
       <input class='border cursor-pointer w-1/2 py-2 pl-3 pr-14 rounded-md' formControlName='dob'
-             type='date'/>
+             type='date' />
     </div>
     <div class='flex mt-5 justify-center'>
-      <p class='w-1/4'></p>
-      <button type='button' class='w-1/2 bg-green text-sm text-white rounded font-medium px-5 h-10 py-2 mr-3' (click)='submit()'>Save</button>
+      <button type='button' class='w-1/4 outline-0 w-1/2 bg-yellow text-sm text-white rounded font-medium px-5 h-10 py-2 mr-3'
+              (click)='changePassword()'>Change Password
+      </button>
+      <button type='button' class='outline-0 w-1/2 bg-green text-sm text-white rounded font-medium px-5 h-10 py-2 mr-3'
+              (click)='submit()'>Save
+      </button>
     </div>
   </div>
 </div>
