--- a/mockez-front/src/app/component/project/component/project/project.component.html
+++ b/mockez-front/src/app/component/project/component/project/project.component.html
@@ -1,16 +1,16 @@
-<div id='main' class='flex justify-evenly mx-auto'>
+<div id='main' class='flex justify-evenly min-h-full mx-auto'>
   <div class='left bg-white rounded-md p-5 w-2/3'>
     <div class='flex justify-between items-center'>
       <h2 class='font-medium'>Document</h2>
       <img src='assets/icon/pencil.png' class='w-5 cursor-pointer' alt='pencil' (click)='isModifyingDescription=true' />
     </div>
     <hr class='mt-3' />
-    <div class='document text-sm p-1 leading-6' [formGroup]='formGroup'>
-      <ng-container *ngIf='!isModifyingDescription'>
+    <div class='document h-full text-sm p-1 leading-6' [formGroup]='formGroup'>
+      <div class='h-full' *ngIf='!isModifyingDescription'>
         <markdown [data]='project.description'></markdown>
-      </ng-container>
+      </div>
       <ng-container *ngIf='isModifyingDescription'>
-        <textarea class='w-full h-96 focus:outline-0 border-2 p-3 rounded' formControlName='description'></textarea>
+        <textarea class='w-full focus:outline-0 border-2 p-3 rounded' formControlName='description'></textarea>
         <div class='flex justify-end mt-10 -mr-3'>
           <button (click)='isModifyingDescription=false' type='button' class='bg-gray text-sm text-black rounded font-medium px-5 h-10 py-2 mr-3'>Cancel</button>
           <button (click)='modifyDescription()' type='button' class='bg-blue text-sm text-white rounded font-medium px-5 h-10 py-2 mr-3'>OK</button>
@@ -30,7 +30,7 @@
     <p class='mt-5 text-sm font-medium'>{{ project.name | uppercase }}</p>
     <p class='mt-4 text-sm'>{{ project.summary }}</p>
     <div class='mt-4 text-sm'>
-      <p class='font-medium'>Group: {{ project.group.name }}</p>
+      <p class='font-medium'>Group: {{ project.group?.name }}</p>
       <p class='mt-3 text-gray-600'>Contributed by: 100 users</p>
       <p class='mt-3 text-gray-600'>Starred: 1000</p>
       <div class='flex h-10 items-center'>
