--- a/mockez-front/src/app/component/project/component/projects/projects.component.html
+++ b/mockez-front/src/app/component/project/component/projects/projects.component.html
@@ -1,12 +1,15 @@
 <div id='main' class='mx-auto'>
-  <div class='search text-center' [formGroup]='credential'>
-    <input class='text-sm w-1/2 py-2 px-5 rounded-md' formControlName='filter' type='text' placeholder='Find anything...' />
+  <div class='text-center items-center'>
+    <input class='text-sm w-1/2 focus:drop-shadow-xl py-2 px-5 rounded-md' [formControl]='filter' type='text'
+           placeholder='{{ "label.search_placeholder" | translate }}' />
+    <button class='ml-3 rounded bg-green font-medium hover:drop-shadow-xl text-white text-sm py-1.5 px-5'
+            (click)='create()'>{{ 'label.button_new' | translate }}</button>
   </div>
-  <div *ngIf='!projects.length' class='mt-5 text-center text-sm'>{{ credential.get('filter')?.value ? 'No match' : 'project.table.empty' | translate }}</div>
+  <p *ngIf='!projects?.length' class='mt-5 text-center text-sm'>{{ 'message.no_project_match' | translate }}</p>
   <div class='text-sm'>
     <div *ngFor='let project of projects; index as index'
-         class='flex bg-white justify-between rounded-md py-5 px-14 mt-5 w-full relative hover:drop-shadow-xl'>
-      <div class='absolute left-7 rounded-md w-1.5 h-28' [style]='setLineBackgroundColor(index)'></div>
+         class='flex bg-white justify-between rounded-md py-5 px-14 mt-5 relative hover:drop-shadow-xl'>
+      <div class='absolute left-7 rounded-md w-1.5 h-28 bg-green'></div>
       <div class='left w-1/2'>
         <p class='font-medium'>
           <a [routerLink]='project?.id' class='cursor-pointer hover:underline'>{{ project?.name | uppercase }}</a>
@@ -32,9 +35,4 @@
       <p class='mt-3 text-gray-600 absolute bottom-5'>Updated {{ project.modifiedDate! | dateDurationPipe }}</p>
     </div>
   </div>
-  <button
-    class='absolute bottom-10 right-5 bg-green rounded-full w-12 h-12 drop-shadow-xl font-bold text-white search-button'
-    (click)='create()'>
-    +
-  </button>
 </div>
