--- a/mockez-front/src/app/component/schema/component/schemas/schemas.component.html
+++ b/mockez-front/src/app/component/schema/component/schemas/schemas.component.html
@@ -3,7 +3,7 @@
     <input class='text-sm w-1/2 py-2 px-5 rounded-md' formControlName='filter' type='text' placeholder='Find anything...' />
   </div>
   <div class='flex mt-5'>
-    <div class='cards -ml-3 flex flex-wrap content-around {{ isOpenDetail ? "w-3/4" : "" }}'>
+    <div class='relative cards -ml-3 flex flex-wrap content-start {{ isOpenDetail ? "w-3/4" : "" }}'>
       <div *ngFor='let schema of schemas; index as index'
            class='m-3 card rounded-md cursor-pointer p-5 w-60 h-80 bg-white relative {{ (schemaDetail && schemaDetail.id===schema.id) ? "drop-shadow-xl" : "" }} hover:drop-shadow-xl'
            (click)='openDetail(schema.id!)'>
@@ -18,6 +18,11 @@
           <p class='w-3 h-3 ml-3 rounded-full bg-green'></p>
         </div>
       </div>
+      <button
+        class='absolute bottom-10 right-5 bg-green rounded-full w-12 h-12 drop-shadow-xl font-bold text-white search-button'
+        (click)='create()'>
+        +
+      </button>
     </div>
     <div *ngIf='isOpenDetail' class='detail my-5 w-1/4'>
       <div class='bg-white p-5 text-sm rounded-md drop-shadow-xl'>
@@ -53,9 +58,4 @@
       </div>
     </div>
   </div>
-  <button
-    class='absolute bottom-10 right-5 bg-green rounded-full w-12 h-12 drop-shadow-xl font-bold text-white search-button'
-    (click)='create()'>
-    +
-  </button>
 </div>
