--- a/mockez-front/src/app/shared/layout/component/navigation/navigation.component.html
+++ b/mockez-front/src/app/shared/layout/component/navigation/navigation.component.html
@@ -1,6 +1,7 @@
 <div id='main' class='h-screen border-r-2 relative'>
-  <div class='dock cursor-pointer bg-green absolute z-20 -right-4 drop-shadow w-8 h-8 rounded-full flex justify-center items-center'>
-    <img class='w-5' src='assets/icon/nav/unexpanded.png' alt='unexpanded'/>
+  <div
+    class='dock cursor-pointer bg-green absolute z-20 -right-4 drop-shadow w-8 h-8 rounded-full flex justify-center items-center'>
+    <img class='w-5' src='assets/icon/nav/unexpanded.png' alt='unexpanded' />
   </div>
   <section class='p-4'>
     <div class='flex -ml-3'>
@@ -9,73 +10,69 @@
       <p class='w-3 h-3 ml-3 rounded-full bg-green'></p>
     </div>
     <div class='flex items-center mt-8'>
-      <img class='w-10' src='assets/icon/navigation/panda.png' alt='panda'/>
+      <img class='w-10' src='assets/icon/navigation/panda.png' alt='panda' />
       <span class='font-bold ml-3'>MOCKEZ</span>
     </div>
-<!--    <div class='flex mt-5 pl-4 py-2 bg-gray rounded-md'>-->
-<!--      <img class='icon' src='assets/icon/nav/search.png' alt='search'/>-->
-<!--      <input class='text-sm ml-5 bg-transparent' type='text' placeholder='Find...'/>-->
-<!--    </div>-->
   </section>
-  <hr class='mt-3'/>
+  <hr class='mt-3' />
   <section class='text-sm font-medium mt-5 pr-6'>
-    <a routerLink='notification' routerLinkActive='active'
+    <a routerLink='notification' routerLinkActive='active'  *ngIf='isEnabled("notification")'
        class='tab flex items-center cursor-pointer py-3 rounded-r-3xl w-full relative'>
-      <img src='assets/icon/nav/notification.png' alt='NOTIFICATION' class='icon ml-8'/>
+      <img src='assets/icon/nav/notification.png' alt='NOTIFICATION' class='icon ml-8' />
       <span class='ml-5'>NOTIFICATION</span>
       <span class='ml-16 text-center text-white leading-6 bg-red w-6 h-6 rounded-full'>3</span>
     </a>
-    <a routerLink='general' routerLinkActive='active'
+    <a routerLink='general' routerLinkActive='active' *ngIf='isEnabled("general")'
        class='tab flex items-center cursor-pointer py-3 rounded-r-3xl w-full relative'>
-      <img src='assets/icon/nav/general.png' alt='GENERAL' class='icon ml-8'/>
+      <img src='assets/icon/nav/general.png' alt='GENERAL' class='icon ml-8' />
       <span class='ml-5'>GENERAL</span>
     </a>
-    <a routerLink='table' routerLinkActive='active'
+    <a routerLink='table' routerLinkActive='active' *ngIf='isEnabled("table")'
        class='tab flex items-center cursor-pointer py-3 rounded-r-3xl w-full relative'>
-      <img src='assets/icon/nav/table.png' alt='TABLE' class='icon ml-8'/>
+      <img src='assets/icon/nav/table.png' alt='TABLE' class='icon ml-8' />
       <span class='ml-5'>TABLE</span>
     </a>
-    <a routerLink='data-set' routerLinkActive='active'
+    <a routerLink='data-set' routerLinkActive='active' *ngIf='isEnabled("data-set")'
        class='tab flex items-center cursor-pointer py-3 rounded-r-3xl w-full relative'>
-      <img src='assets/icon/nav/data_set.png' alt='DATA SET' class='icon ml-8'/>
+      <img src='assets/icon/nav/data_set.png' alt='DATA SET' class='icon ml-8' />
       <span class='ml-5'>DATA SET</span>
     </a>
-    <a routerLink='mock-api' routerLinkActive='active'
+    <a routerLink='mock-api' routerLinkActive='active' *ngIf='isEnabled("mock-api")'
        class='tab flex items-center cursor-pointer py-3 rounded-r-3xl w-full relative'>
-      <img src='assets/icon/nav/mock_api.png' alt='MOCK API' class='icon ml-8'/>
+      <img src='assets/icon/nav/mock_api.png' alt='MOCK API' class='icon ml-8' />
       <span class='ml-5'>MOCK API</span>
     </a>
-    <a routerLink='schema' routerLinkActive='active'
+    <a routerLink='schema' routerLinkActive='active' *ngIf='isEnabled("schema")'
        class='tab flex items-center cursor-pointer py-3 rounded-r-3xl w-full relative'>
-      <img src='assets/icon/nav/schema.png' alt='SCHEMA' class='icon ml-8'/>
+      <img src='assets/icon/nav/schema.png' alt='SCHEMA' class='icon ml-8' />
       <span class='ml-5'>SCHEMA</span>
     </a>
-    <a routerLink='project' routerLinkActive='active'
+    <a routerLink='project' routerLinkActive='active' *ngIf='isEnabled("project")'
        class='tab flex items-center cursor-pointer py-3 rounded-r-3xl w-full relative'>
-      <img src='assets/icon/nav/project.png' alt='PROJECT' class='icon ml-8'/>
+      <img src='assets/icon/nav/project.png' alt='PROJECT' class='icon ml-8' />
       <span class='ml-5'>PROJECT</span>
     </a>
-    <a routerLink='group' routerLinkActive='active'
+    <a routerLink='group' routerLinkActive='active' *ngIf='isEnabled("group")'
        class='tab flex items-center cursor-pointer py-3 rounded-r-3xl w-full relative'>
-      <img src='assets/icon/nav/group.png' alt='GROUP' class='icon ml-8'/>
+      <img src='assets/icon/nav/group.png' alt='GROUP' class='icon ml-8' />
       <span class='ml-5'>GROUP</span>
     </a>
-    <a routerLink='person' routerLinkActive='active'
+    <a routerLink='person' routerLinkActive='active' *ngIf='isEnabled("person")'
        class='tab flex items-center cursor-pointer py-3 rounded-r-3xl w-full relative'>
-      <img src='assets/icon/nav/person.png' alt='PERSON' class='icon ml-8'/>
+      <img src='assets/icon/nav/person.png' alt='PERSON' class='icon ml-8' />
       <span class='ml-5'>PERSON</span>
     </a>
   </section>
-  <hr class='mt-5'/>
+  <hr class='mt-5' />
   <section class='text-sm font-medium mt-5 pr-6'>
-    <a routerLink='profile' routerLinkActive='active'
+    <a routerLink='profile' routerLinkActive='active' *ngIf='isEnabled("profile")'
        class='tab flex items-center cursor-pointer py-3 rounded-r-3xl w-full relative'>
-      <img src='assets/icon/nav/profile.png' alt='PROFILE' class='icon ml-8'/>
+      <img src='assets/icon/nav/profile.png' alt='PROFILE' class='icon ml-8' />
       <span class='ml-5'>PROFILE</span>
     </a>
-    <a routerLink='setting' routerLinkActive='active'
+    <a routerLink='setting' routerLinkActive='active' *ngIf='isEnabled("setting")'
        class='tab flex items-center cursor-pointer py-3 rounded-r-3xl w-full relative'>
-      <img src='assets/icon/nav/settings.png' alt='SETTINGS' class='icon ml-8'/>
+      <img src='assets/icon/nav/settings.png' alt='SETTINGS' class='icon ml-8' />
       <span class='ml-5'>SETTING</span>
     </a>
   </section>
