--- a/mockez-front/src/app/shared/modal/select-type/select-type.modal.html
+++ b/mockez-front/src/app/shared/modal/select-type/select-type.modal.html
@@ -1,31 +1,41 @@
-<div id='select-type' class='dialog'>
-  <div class='board rounded-md absolute text-sm py-2.5 px-5'>
-    <div *ngIf='!selectTypeOption.isSQLType'
-         class='header flex overflow-auto -ml-2.5'>
-      <div class='item text-center rounded-md shadow-light cursor-pointer flex items-center ml-5 py-2.5 px-5 h-10'>
-        <span>All</span>
-        <span class='ml-2.5'>({{20}})</span>
-      </div>
-      <div *ngFor='let category of categories; index as index'
-           class='{{ category.id === categoryActiveId ? "active" : "" }}  {{ index === categories.length - 1 ? "mr-5" : "" }} item text-center rounded-md shadow-light cursor-pointer flex items-center ml-5 py-2.5 px-5 h-10'
-           (click)='categoryOnClick(category.id!)'>
-        <span [innerHTML]='category.name'></span>
-        <span class='ml-2.5'>({{ category.id || '' }})</span>
+<div id='main' class='dialog'>
+  <div class='' style='width: 1000px'>
+    <div class='flex justify-between'>
+      <p class='font-bold'>{{ 'SELECT TYPE' | uppercase }}</p>
+      <div class='flex'>
+        <p class='w-3 h-3 rounded-full bg-red'></p>
+        <p class='w-3 h-3 ml-3 rounded-full bg-yellow'></p>
+        <p class='w-3 h-3 ml-3 rounded-full bg-green'></p>
       </div>
     </div>
-    <div class='cards flex flex-wrap items-center justify-around pt-0 px-7 pb-7 mt-5 overflow-auto'>
-      <div *ngFor='let item of data'
-           class='{{ item.id === selectTypeOption.type.id ? "active" : "" }} card bg-white rounded-md cursor-pointer relative mt-5 p-5 h-28'
-           (click)='typeOnClick(item)'>
-        <p class='font-medium' [innerHTML]='item.code'></p>
-        <p class='text-justify' [innerHTML]='item.description | truncate:80'></p>
+    <div class='text-center'>
+      <input class='text-sm w-1/2 py-2 drop-shadow focus:drop-shadow-xl px-5 rounded-md' [formControl]='filter' type='text' placeholder='Find anything...' />
+    </div>
+    <div class='flex mt-10 overflow-y-scroll' style='height: 500px'>
+      <div *ngIf='!option.isSQLType' class='w-1/4'>
+        <button *ngFor='let category of categories' class='mt-5 h-8 rounded w-full shadow hover:shadow-xl text-sm font-medium'>{{ category.name }}</button>
+      </div>
+      <div class='flex flex-wrap justify-evenly {{ option.isSQLType ? "w-full" : "w-3/4" }} content-start'>
+        <div *ngFor='let type of types; index as index'
+             class='relative m-4 flex items-center cursor-pointer drop-shadow hover:drop-shadow-xl bg-white py-5 pl-10 pr-5 rounded-md w-60 h-32'
+             (click)='close(type)'>
+          <div class='absolute left-4 rounded-md w-1 h-24 bg-green'></div>
+          <div class='w-1/4'>
+            <img class='w-20' src='assets/{{ option.isSQLType ? "sql" : "generate-type" }}.png'
+                 alt='{{ option.isSQLType ? "sql" : "generate type" }}' />
+          </div>
+          <div class='info ml-5 w-1/2'>
+            <p class='font-medium'>{{ type.code }}</p>
+            <p class='text-sm text-gray-500'>{{ type.description | truncate:10 }}</p>
+            <p class='text-sm text-gray-500'>{{ 'Used: 100' }}</p>
+          </div>
+        </div>
       </div>
     </div>
-    <div
-      class='btn-cancel rounded-md flex items-center cursor-pointer absolute justify-center bottom-5 right-5 py-1 px-4'
-      (click)='close()'>
-      <span class='font-medium'>Cancel</span>
-      <img class='icon ml-2.5' src='assets/icon/general/cancel.png' alt='cancel'/>
+    <div class='flex justify-end -mr-3 mt-5'>
+      <button (click)='close(false)' type='button'
+              class='bg-gray text-sm text-black rounded font-medium px-5 h-10 py-2 mr-3'>Cancel
+      </button>
     </div>
   </div>
 </div>
