--- a/mockez-front/src/app/component/profile/component/profile/profile.component.html
+++ b/mockez-front/src/app/component/profile/component/profile/profile.component.html
@@ -61,7 +61,7 @@
              type='date' />
     </div>
     <div class='flex mt-5 justify-center'>
-      <button type='button' class='w-1/4 outline-0 w-1/2 bg-yellow text-sm text-white rounded font-medium px-5 h-10 py-2 mr-3'
+      <button type='button' class='w-1/4 outline-0 bg-yellow text-sm text-white rounded font-medium px-5 h-10 py-2 mr-3'
               (click)='changePassword()'>Change Password
       </button>
       <button type='button' class='outline-0 w-1/2 bg-green text-sm text-white rounded font-medium px-5 h-10 py-2 mr-3'
