--- a/mockez-front/src/app/shared/component/page-not-found/page-not-found.component.html
+++ b/mockez-front/src/app/shared/component/page-not-found/page-not-found.component.html
@@ -1,7 +1,6 @@
 <div id='page-not-found' class='text-center mx-auto mt-40 rounded-md w-96 p-10 h-96 bg-white shadow-light'>
-  <img src='assets/panda-sad.png' class='mx-auto w-36' alt='panda-sad'/>
+  <img src='assets/panda-sad.png' class='mx-auto w-36' alt='panda-sad' />
   <p class='font-bold text-xl'>Oh no!</p>
-  <p class='text-gray-500 my-5 text-sm'>We're usually a treasure chest of knowledge, but we couldn't find what you're
-    looking for.</p>
-  <a routerLink='/' class='bg-blue-500 rounded-md font-medium text-white py-2 px-10'>Home</a>
+  <p class='text-gray-500 my-5 text-sm'>Page not found.</p>
+  <a routerLink='/' class='bg-blue rounded hover:drop-shadow-xl font-medium text-white py-2 px-10'>Home</a>
 </div>
