MOC-65: BACKEND - FRONTEND signup and forgot password send mail

--- a/mockez-front/src/app/component/auth/component/forgot-password/forgot-password.component.html
+++ b/mockez-front/src/app/component/auth/component/forgot-password/forgot-password.component.html
@@ -1,19 +1,19 @@
 <div id='main'>
-  <div [formGroup]='credential' class='board bg-white rounded-md shadow-light text-sm mt-20 pt-14 px-10 mx-auto w-96'>
+  <div class='board bg-white rounded-md shadow-light text-sm mt-20 pt-14 px-10 mx-auto w-96'>
     <h1 class='text-center font-bold text-xl tracking-wider mb-14'>Reset password</h1>
     <div class='relative'>
-      <label class='block font-medium' for='email'>Email</label>
+      <label class='block font-medium' for='username'>Email</label>
       <div class='input flex items-center'>
         <div class='flex items-center w-1/12'>
           <img class='icon' src='assets/icon/navigation/user.png' alt='user'/>
         </div>
-        <input formControlName='email' class='relative px-5 pt-1 pb-3 mt-3 w-11/12' type='text' id='email'
+        <input [formControl]='username' class='relative px-5 pt-1 pb-3 mt-3 w-11/12' type='text' id='username'
                placeholder='Enter your email address'/>
       </div>
     </div>
     <div class='text-center mt-8'>
       <button class='bg-yellow font-bold text-white rounded p-2.5 w-11/12'
-      (click)='sendCode()'>SEND CODE</button>
+      (click)='sendOPT()'>SEND CODE</button>
     </div>
     <div class='text-center mt-8 text-gray-500'>
       If you have account, <a routerLink='/auth/login' class='underline text-blue-500'>login</a> now or by using
