--- a/mockez-front/src/app/component/project/modal/save-project/save-project.modal.html
+++ b/mockez-front/src/app/component/project/modal/save-project/save-project.modal.html
@@ -9,23 +9,38 @@
       </div>
     </div>
     <div class='relative mt-5'>
-      <label class='block font-medium' for='name'>Name:</label>
-      <div class='input flex items-center'>
-        <input formControlName='name' class='relative pt-1 pb-3 mt-3 w-full' type='text' id='name'
-               placeholder='Enter project name'/>
+      <label class='block font-medium pl-3' for='name'>{{ 'Name: *' | translate }}</label>
+      <div class='input flex flex-col'>
+        <input formControlName='name'
+               class='{{ formGroup.get("name")?.invalid ? "border-red-300" : "" }} border rounded relative py-2 px-3 mt-1 w-full'
+               type='text' id='name'
+               placeholder='{{ "Please enter project name" | translate }}' />
+        <p class='ml-3 mt-2 text-red-500'
+           *ngIf='formGroup.get("name")?.errors?.["required"]'>{{ 'validator.required' | translate }}</p>
+        <p class='ml-3 mt-2 text-red-500'
+           *ngIf='formGroup.get("name")?.errors?.["maxlength"]'>{{ ('validator.max_length' | translate) + '255.' }}</p>
       </div>
     </div>
     <div class='relative mt-5'>
-      <label class='block font-medium' for='summary'>Summary:</label>
-      <div class='input flex items-center'>
-        <textarea formControlName='summary' class='relative leading-6 pt-1 pb-3 mt-3 w-full h-96 max-h-96 focus:outline-0'
+      <label class='block font-medium pl-3' for='summary'>Summary:</label>
+      <div class='input flex flex-col'>
+        <textarea formControlName='summary'
+                  class='relative leading-6 rounded {{ formGroup.get("summary")?.invalid ? "border-red-300" : "" }} border resize-none py-2 px-3 mt-1 w-full h-96 focus:outline-0'
                   type='text' id='summary'
                   placeholder='Enter project summary'></textarea>
+        <p class='ml-3 mt-2 text-red-500'
+           *ngIf='formGroup.get("summary")?.errors?.["required"]'>{{ 'validator.required' | translate }}</p>
+        <p class='ml-3 mt-2 text-red-500'
+           *ngIf='formGroup.get("summary")?.errors?.["maxlength"]'>{{ ('validator.max_length' | translate) + '1000.' }}</p>
       </div>
     </div>
     <div class='flex justify-end mt-10 -mr-3'>
-      <button (click)='close(false)' type='button' class='bg-gray text-sm text-black rounded font-medium px-5 h-10 py-2 mr-3'>Cancel</button>
-      <button (click)='submit()' type='button' class='bg-blue text-sm text-white rounded font-medium px-5 h-10 py-2 mr-3'>OK</button>
+      <button (click)='close(false)' type='button'
+              class='bg-gray text-sm text-black rounded font-medium px-5 h-10 py-2 mr-3'>Cancel
+      </button>
+      <button (click)='submit()' type='button'
+              class='bg-blue text-sm text-white rounded font-medium px-5 h-10 py-2 mr-3'>OK
+      </button>
     </div>
   </div>
 </div>
