--- a/mockez-front/src/app/component/schema/modal/save-schema/save-schema-modal.html
+++ b/mockez-front/src/app/component/schema/modal/save-schema/save-schema-modal.html
@@ -9,18 +9,29 @@
       </div>
     </div>
     <div class='relative mt-5'>
-      <label class='block font-medium' for='name'>Name:</label>
-      <div class='input flex items-center'>
-        <input formControlName='name' class='relative pt-1 pb-3 mt-3 w-full' type='text' id='name'
-               placeholder='Enter schema name'/>
+      <label class='block font-medium pl-3' for='name'>{{ 'modal.create_group.name' | translate }}</label>
+      <div class='input flex flex-col'>
+        <input formControlName='name'
+               class='{{ formGroup.get("name")?.invalid ? "border-red-300" : "" }} border rounded relative py-2 px-3 mt-1 w-full'
+               type='text' id='name'
+               placeholder='{{ "modal.create_group.name_placeholder" | translate }}' />
+        <p class='ml-3 mt-2 text-red-500'
+           *ngIf='formGroup.get("name")?.errors?.["required"]'>{{ 'validator.required' | translate }}</p>
+        <p class='ml-3 mt-2 text-red-500'
+           *ngIf='formGroup.get("name")?.errors?.["maxlength"]'>{{ ('validator.max_length' | translate) + '255.' }}</p>
       </div>
     </div>
     <div class='relative mt-5'>
-      <label class='block font-medium' for='description'>Summary:</label>
-      <div class='input flex items-center'>
-        <textarea formControlName='description' class='relative leading-6 pt-1 pb-3 mt-3 w-full h-96 max-h-96 focus:outline-0'
+      <label class='block font-medium pl-3' for='description'>{{ 'modal.create_group.description' | translate }}</label>
+      <div class='input flex flex-col'>
+        <textarea formControlName='description'
+                  class='relative leading-6 rounded {{ formGroup.get("description")?.invalid ? "border-red-300" : "" }} border resize-none py-2 px-3 mt-1 w-full h-96 focus:outline-0'
                   type='text' id='description'
-                  placeholder='Enter schema description'></textarea>
+                  placeholder='{{ "modal.create_group.description_placeholder" | translate }}'></textarea>
+        <p class='ml-3 mt-2 text-red-500'
+           *ngIf='formGroup.get("description")?.errors?.["required"]'>{{ 'validator.required' | translate }}</p>
+        <p class='ml-3 mt-2 text-red-500'
+           *ngIf='formGroup.get("description")?.errors?.["maxlength"]'>{{ ('validator.max_length' | translate) + '4096.' }}</p>
       </div>
     </div>
     <div class='flex justify-end mt-10 -mr-3'>
