--- a/mockez-front/src/app/shared/modal/modal-provider/dialog/dialog.modal.html
+++ b/mockez-front/src/app/shared/modal/modal-provider/dialog/dialog.modal.html
@@ -2,6 +2,7 @@
   <div class='form'>
     <p class='font-bold'>{{ option.title | uppercase }}</p>
     <div class='body text-sm text-justify mt-5'>{{ option.body }}</div>
+    <div class='body text-sm text-justify mt-3' [innerHTML]='option.detail'></div>
     <div class='flex justify-between items-center mt-5'>
       <div class='flex'>
         <p class='w-3 h-3 rounded-full bg-red'></p>
