MOC-68: adjust method

--- a/mockez-front/src/app/component/auth/component/forgot-password/forgot-password.component.html
+++ b/mockez-front/src/app/component/auth/component/forgot-password/forgot-password.component.html
@@ -13,7 +13,7 @@
     </div>
     <div class='text-center mt-8'>
       <button class='bg-yellow font-bold text-white rounded p-2.5 w-11/12'
-      (click)='sendOPT()'>SEND CODE</button>
+      (click)='sendOTP()'>SEND CODE</button>
     </div>
     <div class='text-center mt-8 text-gray-500'>
       If you have account, <a routerLink='/auth/login' class='underline text-blue-500'>login</a> now or by using
