--- a/mockez-front/src/app/component/table/modal/save-table/save-table.modal.html
+++ b/mockez-front/src/app/component/table/modal/save-table/save-table.modal.html
@@ -1,7 +1,7 @@
 <div id='main' class='dialog text-sm'>
   <div class='board' [formGroup]='formGroup'>
     <div class='flex justify-between'>
-      <p class='font-bold'>SAVE TABLE</p>
+      <p class='font-bold'>{{ 'modal.create_table.title' | translate }}</p>
       <div class='flex'>
         <p class='w-3 h-3 rounded-full bg-red'></p>
         <p class='w-3 h-3 ml-3 rounded-full bg-yellow'></p>
@@ -9,12 +9,12 @@
       </div>
     </div>
     <div class='relative mt-5'>
-      <label class='block font-medium pl-3' for='name'>{{ 'modal.create_group.name' | translate }}</label>
+      <label class='block font-medium pl-3' for='name'>{{ 'modal.create_table.name' | translate }}</label>
       <div class='input flex flex-col'>
         <input formControlName='name'
                class='{{ formGroup.get("name")?.invalid ? "border-red-300" : "" }} border rounded relative py-2 px-3 mt-1 w-full'
                type='text' id='name'
-               placeholder='{{ "modal.create_group.name_placeholder" | translate }}' />
+               placeholder='{{ "modal.create_table.name_placeholder" | translate }}' />
         <p class='ml-3 mt-2 text-red-500'
            *ngIf='formGroup.get("name")?.errors?.["required"]'>{{ 'validator.required' | translate }}</p>
         <p class='ml-3 mt-2 text-red-500'
@@ -22,12 +22,12 @@
       </div>
     </div>
     <div class='relative mt-5'>
-      <label class='block font-medium pl-3' for='description'>{{ 'modal.create_group.description' | translate }}</label>
+      <label class='block font-medium pl-3' for='description'>{{ 'modal.create_table.description' | translate }}</label>
       <div class='input flex flex-col'>
         <textarea formControlName='description'
                   class='relative leading-6 rounded {{ formGroup.get("description")?.invalid ? "border-red-300" : "" }} border resize-none py-2 px-3 mt-1 w-full h-96 focus:outline-0'
                   type='text' id='description'
-                  placeholder='{{ "modal.create_group.description_placeholder" | translate }}'></textarea>
+                  placeholder='{{ "modal.create_table.description_placeholder" | translate }}'></textarea>
         <p class='ml-3 mt-2 text-red-500'
            *ngIf='formGroup.get("description")?.errors?.["required"]'>{{ 'validator.required' | translate }}</p>
         <p class='ml-3 mt-2 text-red-500'
