--- a/mockez-front/src/app/shared/modal/create-schema/create-schema.modal.html
+++ b/mockez-front/src/app/shared/modal/create-schema/create-schema.modal.html
@@ -5,7 +5,7 @@
       <label class='block font-medium' for='name'>Name:</label>
       <div class='input flex items-center'>
         <input formControlName='name' class='relative pt-1 pb-3 mt-3 w-full' type='text' id='name'
-               placeholder='Enter project name' />
+               placeholder='Enter schema name' />
       </div>
     </div>
     <div class='relative mt-5'>
@@ -13,7 +13,7 @@
       <div class='input flex items-center'>
         <textarea formControlName='description' class='relative pt-1 pb-3 mt-3 w-full h-60 max-h-60 focus:outline-0'
                   type='text' id='description'
-                  placeholder='Enter project description'></textarea>
+                  placeholder='Enter schema description'></textarea>
       </div>
     </div>
     <div class='flex absolute bottom-10 right-10 mt-10 justify-end -mr-3'>
