--- a/mockez-front/src/app/component/general/component/general/general.component.html
+++ b/mockez-front/src/app/component/general/component/general/general.component.html
@@ -25,8 +25,8 @@
             class='w-1/5 border p-2 rounded text-left {{ field["generateType"]?.code ? "" : "text-gray-500" }} outline-0'
             (click)='selectGenerateType(index)'>{{ field["generateType"]?.code || 'Field generate type' }}</button>
           <div class='w-1/5 flex items-center'>
-            {{ 'Blank:' }}
-            <input class='w-16 border ml-2 p-2 rounded' type='number' max='100' min='0' />
+            <!--            {{ 'Blank:' }}-->
+            <!--            <input class='w-16 border ml-2 p-2 rounded' type='number' max='100' min='0' />-->
             <button class='bg-red hover:drop-shadow-xl font-medium text-white w-8 h-8 rounded ml-5'
                     (click)='removeField(index)'>{{ 'X' }}</button>
           </div>
